deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-greeting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-greeting-app
  template:
    metadata:
      labels:
        app: go-greeting-app
    spec:
      containers:
      - name: application
        image: jrreid/go-greeting-app
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8081
