service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
spec:
  selector:
    app: go-greeting-app
  ports:
  - name: http
    protocol: TCP
    port: 8081
    #targetPort: 8081
  type: LoadBalancer
