greeting-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: greeting-service-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "greeting-service.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting-service
spec:
  gateways:
    - greeting-service-gateway # namespace of the Gateway
  hosts:
    - "greeting-service.com"
  http:
  - route:
    - destination:
        host: greeting-service
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeting-service
spec:
  host: greeting-service
  subsets:
  - name: v1
    labels:
      version: v1
